Text align in project fixed

--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ body {
 .services-list div:hover {
   transform: translateY(-10px);
 }
-section {
+.section {
   display: flex;
   flex-wrap: wrap;
 }
@@ -429,17 +429,32 @@ section {
   animation: showText 0.5s 1s linear forwards;
   opacity: 0;
 }
+#portfolio{
+  width: 100%;
+}
 .main-text {
   padding-top: 130px;
   margin-top: 200px;
 }
-.main-text h2 {
-  text-align: center;
-  font-size: 60px;
-  line-height: 1;
+/* .main-text .div-text{
+  position: relative;
+  width: 100%;
+  background-color: red;
 }
-.main-text h2 span {
+.main-text .div-text h2{
+  font-size: 60px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+} */
+.main-text h2 {
+  font-size: 60px;
+  text-align: center;
+}
+.main-text  h2 span {
   color: #0ef;
+  text-align: center;
 }
 .portfolio-content {
   display: grid;
